# sol1

./: Cargo.toml  Makefile  README.md
docs/: index.html  sol1.d.ts  sol1.js  sol1_bg.wasm  sol1_bg.wasm.d.ts
src/: lib.rs
src/game/: ai.rs  game.rs  input.rs  mod.rs  renderer.rs  robot.rs  systems.rs  types.rs  world.rs
static/: index.html
